- add height so the hover area covers the whole nav, fixes chrome

--- a/site/css/site2.css
+++ b/site/css/site2.css
@@ -107,6 +107,7 @@ a:hover {
   float: left;
   margin: 0;
   padding: 0;
+  min-height:27px;
 }
 
 #nav li a {
